--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,13 @@
+<section class="block">
+    <div class="hero is-success">
+        <div class="hero-body">
+            <div class="container">
+                <h2 class="title">Error </h2>
+            </div>
+        </div>
+    </div>
+</section>
+
 <h1 class="title">
-    <%= message %>
+    <%= msg %>
 </h1>
