--- a/views/user.ejs
+++ b/views/user.ejs
@@ -14,7 +14,54 @@
         <h1>
             Hello,
             <%= email.split("@")[0] %>
+
         </h1>
+
+
+        <% if(typeof list == 'object' && list.length > 0){ %>
+            <h1>
+                Your uploaded CVs:
+            </h1>
+            <section class="block">
+                <div class="container">
+                    <table class="table is-striped is-hoverable">
+                        <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>Job Position</th>
+                                <th>Job Offers</th>
+                                <!-- <th>Status</th> -->
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <% for (cv of list) { %>
+                                <!-- Stupid way of doing a clickable table row lol
+                                    - I wouldn't have come up with anything different lol -->
+                                <tr onclick="window.location='/posts/<%= cv.cvId %>';" style="cursor: pointer;">
+                                    <td>
+                                        <%= cv.cvId %>
+                                    </td>
+                                    <td>
+                                        <%= cv.jobTitle %>
+                                    </td>
+                                    <!-- <td>
+                                            <%= cv.technicalSkills %>
+                                        </td> -->
+                                    <td>
+                                        <%= cv.jobOffers %>
+                                    </td>
+                                </tr>
+                                <% } %>
+                        </tbody>
+                    </table>
+                </div>
+            </section>
+            <%  } else { %>
+                <h1>
+                    You haven't uploaded any CVs.
+                </h1>
+                <% } %>
+
     </div>
 
 
