--- a/views/post.ejs
+++ b/views/post.ejs
@@ -11,18 +11,76 @@
 
 <section class="block">
     <div class="container">
-        <div>
+        <div class="columns is-centered">
+            <div class="column is-10 has-text-centered">
+                <h1>
+                    <%= cv.jobTitle %>
+                </h1>
 
-            <h1>
-                <%= cv.jobTitle %>
-            </h1>
+                <button class="button js-modal-trigger" data-target="cv-view-modal">
+                    View CV
+                </button>
 
-            <object width="60%" height="600" data="data:application/pdf;base64,<%= cvData %>" type="application/pdf"
-                    class="internal">
-                <embed src="data:application/pdf;base64,<%= cvData %>" type="application/pdf"/>
-            </object>
-
-            <!--            <embed src="/static/cv.pdf" width="60%" height="600" type="application/pdf">-->
+                <div class="modal" id="cv-view-modal">
+                    <div class="modal-background"></div>
+                    <div class="modal-content" style="width: 1000px !important; height: 1000px !important;">
+                        <object width="100%" height="100%" data="data:application/pdf;base64,<%= cvData %>"
+                                type="application/pdf"
+                                class="internal">
+                            <embed src="data:application/pdf;base64,<%= cvData %>" type="application/pdf"/>
+                        </object>
+                    </div>
+                    <button class="modal-close is-large" aria-label="close"></button>
+                </div>
+            </div>
         </div>
     </div>
 </section>
+
+<script>
+    document.addEventListener('DOMContentLoaded', () => {
+        // Functions to open and close a modal
+        function openModal($el) {
+            $el.classList.add('is-active');
+        }
+
+        function closeModal($el) {
+            $el.classList.remove('is-active');
+        }
+
+        function closeAllModals() {
+            (document.querySelectorAll('.modal') || []).forEach(($modal) => {
+                closeModal($modal);
+            });
+        }
+
+        // Add a click event on buttons to open a specific modal
+        (document.querySelectorAll('.js-modal-trigger') || []).forEach(($trigger) => {
+            const modal = $trigger.dataset.target;
+            const $target = document.getElementById(modal);
+            console.log($target);
+
+            $trigger.addEventListener('click', () => {
+                openModal($target);
+            });
+        });
+
+        // Add a click event on various child elements to close the parent modal
+        (document.querySelectorAll('.modal-background, .modal-close, .modal-card-head .delete, .modal-card-foot .button') || []).forEach(($close) => {
+            const $target = $close.closest('.modal');
+
+            $close.addEventListener('click', () => {
+                closeModal($target);
+            });
+        });
+
+        // Add a keyboard event to close all modals
+        document.addEventListener('keydown', (event) => {
+            const e = event || window.event;
+
+            if (e.keyCode === 27) { // Escape key
+                closeAllModals();
+            }
+        });
+    });
+</script>
