--- a/views/about.ejs
+++ b/views/about.ejs
@@ -10,7 +10,8 @@
 
 <section class="block">
     <div class="container">
-        <h1 style="font-size: 150px">Some Stuff About Us</h1>
-        <p>:)</p>
+        <h1 style="font-size: 100px">About Us</h1>
+        <p>We are team B, a group of skilled programmers passionate about delivering high quality web services. We are also passionate about helping people find their dream job. To this end we have created openCV, such that people may see the example of
+            others, and their successes, to better guide their own.</p>
     </div>
 </section>
