--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,9 +1,9 @@
 <nav class="navbar" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
         <a class="navbar-item" href="/">
-            <img src="https://livejones.com/wp-content/uploads/2020/05/logo-Placeholder.png" width="70" height="28" alt="Logo">
+            <img src="/static/logo3.jpg" width="40" height="40" alt="Logo">
         </a>
-
+        <!-- https://livejones.com/wp-content/uploads/2020/05/logo-Placeholder.png -->
         <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="cvLibNavbar">
             <span aria-hidden="true"></span>
             <span aria-hidden="true"></span>
